src/elements/snapshots/panoramix__elements__button__tests__button_press.snap
---
source: src/elements/button.rs
expression: harness.get_root_debug_state()

---
RootWidget(
    Column(
        IdentityWrapper(
            ControllerHost(
                Button(
                    "Hello",
                ),
            ),
        ),
    ),
)
