src/elements/snapshots/panoramix__elements__button__tests__button_widget.snap
---
source: src/elements/button.rs
expression: button_state

---
RootWidget(
    Column(
        IdentityWrapper(
            ControllerHost(
                Button(
                    "Hello",
                ),
            ),
        ),
    ),
)
