src/elements/snapshots/panoramix__elements__button__tests__new_button-2.snap
---
source: src/elements/button.rs
expression: button_data
---
ButtonData {
    text: "Hello",
    flex: FlexParams {
        flex: 1.0,
        alignment: None,
    },
}
