src/elements/snapshots/panoramix__elements__button__tests__new_button.snap
---
source: src/elements/button.rs
expression: button
---
Button {
    text: "Hello",
    flex: FlexParams {
        flex: 1.0,
        alignment: None,
    },
}
